--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <img src="assets/images/daniel-owens-portfolio.jpg" class="auth-image" alt="Your Name">
 
       <p>
-        Yo - I'm Daniel, a web developer in San Francisco. I'm interested in making websites that are elegant and useful. 
+        Yo - I'm Daniel, a soon-to-be web developer living in San Francisco. I'm interested in making websites that are elegant and useful. Until I acquire the skills necessary to do that, you can catch me tearing my hair out at cafés throughout the city.
 
 
     </section>
